--- a/game.html
+++ b/game.html
@@ -35,6 +35,7 @@
                                     <div>
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis qui quibusdam suscipit unde velit veritatis vitae voluptas? Aliquid deleniti deserunt dolorem expedita id in iusto libero maiores minima molestiae natus non odio perferendis placeat provident quae quaerat qui quidem reiciendis, rem repellendus sit sunt tempore unde vero vitae voluptatum. Earum ipsum rem tempora voluptas? Debitis eaque, labore natus sit voluptatem voluptatum. Asperiores assumenda autem consequatur deleniti eligendi magnam natus nihil quidem repudiandae, soluta veniam voluptates. Eaque eveniet sed sunt voluptas.
                                     </div>
+                                    <button type="button" class="next-btn" onclick="showCard(1)">KÖVETKEZŐ</button>
                                 </div>
                             </div>
                         </div>
@@ -45,5 +46,9 @@
             </div>
         </div>
     </div>
+
+
+
+    <script src="engine.js"></script>
 </body>
 </html>
