--- a/game.html
+++ b/game.html
@@ -27,15 +27,59 @@
                         <div class="carousel-item">
                             <div class="page-container">
                                 <div class="page left-page">
-                                    <div>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis qui quibusdam suscipit unde velit veritatis vitae voluptas? Aliquid deleniti deserunt dolorem expedita id in iusto libero maiores minima molestiae natus non odio perferendis placeat provident quae quaerat qui quidem reiciendis, rem repellendus sit sunt tempore unde vero vitae voluptatum. Earum ipsum rem tempora voluptas? Debitis eaque, labore natus sit voluptatem voluptatum. Asperiores assumenda autem consequatur deleniti eligendi magnam natus nihil quidem repudiandae, soluta veniam voluptates. Eaque eveniet sed sunt voluptas.
-                                    </div>
+                                    <img src="pictures/cim.png" alt="" style="justify-content: center; margin-top: 40px;">
                                 </div>
                                 <div class="page right-page">
-                                    <div>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis qui quibusdam suscipit unde velit veritatis vitae voluptas? Aliquid deleniti deserunt dolorem expedita id in iusto libero maiores minima molestiae natus non odio perferendis placeat provident quae quaerat qui quidem reiciendis, rem repellendus sit sunt tempore unde vero vitae voluptatum. Earum ipsum rem tempora voluptas? Debitis eaque, labore natus sit voluptatem voluptatum. Asperiores assumenda autem consequatur deleniti eligendi magnam natus nihil quidem repudiandae, soluta veniam voluptates. Eaque eveniet sed sunt voluptas.
-                                    </div>
-                                    <button type="button" class="next-btn" onclick="showCard(1)">KÖVETKEZŐ</button>
+                                        <div class="mini-slider">
+
+                                            <button class="mini-prev"><img src="selected_characters/play.png" alt=""></button>
+                                            <button class="mini-next"><img src="selected_characters/play.png" alt=""></button>
+
+                                            <div class="mini-slider__viewport">
+
+                                                <div class="mini-slide">
+                                                    <img src="selected_characters/301.png" alt="Character 1" id="Character1">
+                                                    <h2>Eldren Morvath</h2>
+                                                    <p>Egy idős férfi, aki éveket vesztett, miközben a labirintusban bolyongott. Úgy hiszi, ismeri a folyosók változó mintáit, és vissza akar térni, hogy megtalálja a Végzet Szívét.</p>
+                                                </div>
+
+                                                <div class="mini-slide">
+                                                    <img src="selected_characters/346.png" alt="Character 2" id="Character2">
+                                                    <h2>Serenya Vale</h2>
+                                                    <p>Seren hallja a labirintusban meghaltak suttogását. A testvére hangját keresi a mélyben, ezért indul útnak.</p>
+                                                </div>
+
+                                                <div class="mini-slide">
+                                                    <img src="selected_characters/348.png" alt="Character 3" id="Character3">
+                                                    <h2>Sir Dorian Ravencross</h2>
+                                                    <p>Páncéljához egy tiltott pecsét köti. Elveszett társainak emléke hajtja vissza a labirintusba, hogy jóvátegye hibáját.</p>
+                                                </div>
+
+                                                <div class="mini-slide">
+                                                    <img src="selected_characters/365.png" alt="Character 4" id="Character4">
+                                                    <h2>Edrin Crowshade</h2>
+                                                    <p>Hátán élőnek tűnő holló-rúna jelzi a csapdák közeledtét – vagy vonzza is őket. A labirintus mélyén keresi saját sorsának kulcsát.</p>
+                                                </div>
+
+                                                <div class="mini-slide">
+                                                    <img src="selected_characters/459.png" alt="Character 5" id="Character5">
+                                                    <h2>Kiren Emberfade</h2>
+                                                    <p>A fiú testébe régen beivódott a labirintus tüze. Érzi, hogy a mélyben valami hívja, ami uralni akarja az erejét.</p>
+                                                </div>
+
+                                                <div class="mini-slide">
+                                                    <img src="selected_characters/477.png" alt="Character 6" id="Character6">
+                                                    <h2>Vaelira Moonshard</h2>
+                                                    <p>Az énekes lány hangját egy labirintusbeli kristály teremtmény torzította meg. Dala elcsendesítheti vagy feldühítheti a szörnyeket.</p>
+                                                </div>
+
+                                            </div>
+
+                                        </div>
+                                        <div class="button-row">
+                                            <button type="button" class="accept-btn" onclick="acceptCharacter()">ELFOGADÁS</button>
+                                            <button type="button" class="next-btn" onclick="showCard(1)">KÖVETKEZŐ</button>
+                                        </div>
                                 </div>
                             </div>
                         </div>
