--- a/game.html
+++ b/game.html
@@ -40,7 +40,7 @@
                                                 <div class="mini-slide">
                                                     <img src="selected_characters/301.png" alt="Character 1" id="Character1">
                                                     <h2>Eldren Morvath</h2>
-                                                    <p>Egy idős férfi, aki éveket vesztett, miközben a labirintusban bolyongott. Úgy hiszi, ismeri a folyosók változó mintáit, és vissza akar térni, hogy megtalálja a Végzet Szívét.</p>
+                                                    <p>Egy idős férfi, aki éveket vesztett, miközben a labirintusban bolyongott. Vissza akar térni, hogy megtalálja a Végzet Szívét.</p>
                                                 </div>
 
                                                 <div class="mini-slide">
@@ -77,8 +77,8 @@
 
                                         </div>
                                         <div class="button-row">
-                                            <button type="button" class="accept-btn" onclick="acceptCharacter()">ELFOGADÁS</button>
-                                            <button type="button" class="next-btn" onclick="showCard(1)">KÖVETKEZŐ</button>
+                                            <button type="button" class="accept-btn" id="accept-btn" onclick="acceptCharacter()">ELFOGADÁS</button>
+                                            <button type="button" class="next-btnn" id="nextBtn" style="display: none;" onclick="showCard(1)">TOVÁBB</button>
                                         </div>
                                 </div>
                             </div>
