--- a/game.html
+++ b/game.html
@@ -86,9 +86,19 @@
 
 
                     </div>
+
                 </div>
             </div>
         </div>
+          <div class="inventory-wrapper">
+        <div class="inventory-tab" id="inventoryTab">📖</div>
+
+        <div class="inventory-panel" id="inventoryPanel">
+            <h3>Inventory / Életerő</h3>
+            <p>Ez a tartalom csak kattintásra látszik.</p>
+            <p>Életerő: ❤️❤️❤️</p>
+        </div>
+    </div>
     </div>
 
 
